--- a/gb/20/5/13/n12104169.md
+++ b/gb/20/5/13/n12104169.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/myn254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/myn254/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/myn254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/myn254/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/myn254/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/myn254/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/myn254/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/myn254/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/myn254/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/myn254/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/myn254/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/myn254/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/myn254/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>桃园国中会考  高标准防疫措施维护考生权益</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>桃园国中会考 高标准防疫措施维护考生权益</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/e14ad8a49b2c6aa6ec4e68e60965fd45-600x400.jpg" />
 <h6>桃园市长郑文灿视察109年国中教育会考试尝防疫情形。（桃园市府提供）
 </h6>
 <hr>
-<p>【大纪元2020年05月13日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/myn254/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）今（109）年国中教育会考将于5月16日至17日登场，桃园考区报名人数共2万1,801人，因应此波肺炎疫情，各考场已充分做好防疫整备，包括发烧考生的筛检、备用考场准备、试卷发送流程、用餐隔板规范等，各层面皆考虑周延，以高标准防疫作为，维护考生健康及权利。</p>
-<figure id="attachment_12104172" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/05/4cf0d91a7056d75898a442da5ecb55cc.jpg"><img class="size-medium wp-image-12104172" src="https://i.epochtimes.com/assets/uploads/2020/05/4cf0d91a7056d75898a442da5ecb55cc-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">“第二类备用试场”最多容纳5名发烧或严重呼吸道疾病考生。（<ahref="https://github.com/myn254/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>市府提供）</figcaption></figure>
-<p>桃园市长<ahref="https://github.com/myn254/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>视察109年国中教育会考考场防疫整备情形。郑文灿表示，因应考试人潮，各考场会管制进出场动线，加强试场及休息区消毒作业，考生进考场也必须佩戴口罩、准考证，量测体温及进行手部消毒，并贴上辨识贴纸。为确保考生应试健康与安全，今年不开放考生亲友陪考，由桃园市各国中成立考生服务队，协助考生订购午餐及各项应试服务。另亦禁止补习班于各考场周边及入口处发放传单或宣传品，避免人群拥挤，影响考生进入考场的流畅度。</p>
-<figure id="attachment_12104175" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/05/f2043e46c8a37f6bc6cd60782e192f58.jpg"><img class="size-medium wp-image-12104175" src="https://i.epochtimes.com/assets/uploads/2020/05/f2043e46c8a37f6bc6cd60782e192f58-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">桃园市长<ahref="https://github.com/myn254/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>与试务人员合影。（桃园市府提供）</figcaption></figure>
+<p>【大纪元2020年05月13日讯】（大纪元记者徐乃义台湾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）今（109）年国中教育会考将于5月16日至17日登场，桃园考区报名人数共2万1,801人，因应此波肺炎疫情，各考场已充分做好防疫整备，包括发烧考生的筛检、备用考场准备、试卷发送流程、用餐隔板规范等，各层面皆考虑周延，以高标准防疫作为，维护考生健康及权利。</p>
+<figure id="attachment_12104172" aria-describedby="caption-attachment-12104172" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/05/4cf0d91a7056d75898a442da5ecb55cc.jpg"><img class="size-medium wp-image-12104172" src="https://i.epochtimes.com/assets/uploads/2020/05/4cf0d91a7056d75898a442da5ecb55cc-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12104172" class="wp-caption-text">“第二类备用试场”最多容纳5名发烧或严重呼吸道疾病考生。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>市府提供）</figcaption></figure>
+<p>桃园市长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>视察109年国中教育会考考场防疫整备情形。郑文灿表示，因应考试人潮，各考场会管制进出场动线，加强试场及休息区消毒作业，考生进考场也必须佩戴口罩、准考证，量测体温及进行手部消毒，并贴上辨识贴纸。为确保考生应试健康与安全，今年不开放考生亲友陪考，由桃园市各国中成立考生服务队，协助考生订购午餐及各项应试服务。另亦禁止补习班于各考场周边及入口处发放传单或宣传品，避免人群拥挤，影响考生进入考场的流畅度。</p>
+<figure id="attachment_12104175" aria-describedby="caption-attachment-12104175" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/05/f2043e46c8a37f6bc6cd60782e192f58.jpg"><img class="size-medium wp-image-12104175" src="https://i.epochtimes.com/assets/uploads/2020/05/f2043e46c8a37f6bc6cd60782e192f58-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12104175" class="wp-caption-text">桃园市长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%91%E6%96%87%E7%81%BF.md#1">郑文灿</a>与试务人员合影。（桃园市府提供）</figcaption></figure>
 <p>今年各考场校门入口处均设置体温量测站，安排人员量测体温及提供酒精手部消毒，考生进入考场时，须出示准考证入场，若考生额温达摄氏37.5度、耳温达38度，即安排到“第二类备用试场”应考，每间备用试场最多容纳5名发烧或严重呼吸道疾病考生，服务于备用试场的监试人员备有基础防护。</p>
-<figure id="attachment_12104173" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/05/4238f8be78e045a867b8d5f002fe0ce3.jpg"><img class="size-medium wp-image-12104173" src="https://i.epochtimes.com/assets/uploads/2020/05/4238f8be78e045a867b8d5f002fe0ce3-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">提供考生“防疫用餐隔板”。（桃园市府提供）</figcaption></figure>
+<figure id="attachment_12104173" aria-describedby="caption-attachment-12104173" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/05/4238f8be78e045a867b8d5f002fe0ce3.jpg"><img class="size-medium wp-image-12104173" src="https://i.epochtimes.com/assets/uploads/2020/05/4238f8be78e045a867b8d5f002fe0ce3-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12104173" class="wp-caption-text">提供考生“防疫用餐隔板”。（桃园市府提供）</figcaption></figure>
 <p>为降低群聚感染，应试期间各考场皆开冷气及立扇（扇面正对门外直到考试结束），并维持试场前后门开启，及所有窗户留约10公分缝隙，以保持良好通风；用餐时则安排考生在原试场教室进行用餐，并提供考生“防疫用餐隔板”，避免造成群聚与飞沫感染。郑文灿说，今日视察第二类备用试场演练，整体流程顺畅、措施完善，能够兼顾防疫要求及考生权益。</p>
-<figure id="attachment_12104174" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/05/caf84e46e0494a4eea474872ac4164ed.jpg"><img class="size-medium wp-image-12104174" src="https://i.epochtimes.com/assets/uploads/2020/05/caf84e46e0494a4eea474872ac4164ed-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">服务于备用试场的监试人员备有基础防护。（桃园市府提供）</figcaption></figure>
+<figure id="attachment_12104174" aria-describedby="caption-attachment-12104174" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/05/caf84e46e0494a4eea474872ac4164ed.jpg"><img class="size-medium wp-image-12104174" src="https://i.epochtimes.com/assets/uploads/2020/05/caf84e46e0494a4eea474872ac4164ed-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12104174" class="wp-caption-text">服务于备用试场的监试人员备有基础防护。（桃园市府提供）</figcaption></figure>
 <p>桃园教育局长高安邦表示，5月15日下午3时至5时，开放家长及考生前往19所考场学校查看试场位置，但不得进入试场，如经量测发烧者亦不得进入。高局长也提醒，考试当天请国中各校考生务必提早半小时以上抵达考场，避免因入场检查及量测作业影响考试时间，2天考试过程必须全程配戴口罩，进入试场后，除监考人员查验核对身份，要求将口罩拿下外，其余时间皆不得脱下口罩，经劝导仍不配合者，该科将不予计分，请考生务必注意。◇</p>
 <p>责任编辑：李悦</p>
 
@@ -21,42 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/18/6/8/n10466399.md#1">会考桃园私校是大赢家  直升原校还得抢破头</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/19/1/15/n10976334.md#1">桃连区大园国际高中国际交流特色班考英文</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/19/8/12/n11447317.md#1">四技二专统测  六和高中单亲学生双双上北科大</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/3/2/n11908448.md#1">疫情升温  郑文灿：额温枪禁出口没事不到医院</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/4/9/n12016381.md#1">防止飞沫传染  桃园暂停提供试吃、化妆品试用</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12101943.md#1">国际护师节 桃园医院鼓掌致敬护理师</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12101694.md#1">快闪祝福护师节快乐 桃园疗养院协助度过疫情</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12101707.md#1">桃市四大景点年底前防疫人员免费入园</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12101445.md#1">A+智慧城市IoT创意种子发想竞赛 元智大学金奖</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12101450.md#1">石门水库集水区降雨 蓄水量希望不再跌破30%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/8/n10466399.md#1">会考桃园私校是大赢家  直升原校还得抢破头</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/15/n10976334.md#1">桃连区大园国际高中国际交流特色班考英文</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/12/n11447317.md#1">四技二专统测  六和高中单亲学生双双上北科大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/2/n11908448.md#1">疫情升温  郑文灿：额温枪禁出口没事不到医院</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/9/n12016381.md#1">防止飞沫传染  桃园暂停提供试吃、化妆品试用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680175.md#1">醒吾科大携手智泰科技推动AI教育</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680170.md#1">航空城征收住户搬迁 大园警查获窃盗现行犯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/17/n10981686.md#1" target="_blank">两位古琴大师的悲剧：毁琴自尽 文革失踪</a></li><li><a href="https://github.com/myn254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/19/n10650677.md#1" target="_blank">林辉：开了北大自杀先例的史学教授</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099864.md#1">中共火箭失控 飞掠洛城和纽约 坠入大西洋</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099999.md#1">【新闻看点】真把世界惹恼了 北京最怕什么？</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/10/n12096347.md#1">【最新疫情5·11】川普：对重谈美中协议没兴趣</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099257.md#1">武统台湾？台前国大代表：共军军力吹牛露馅</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12100344.md#1">美国推倒中共防火墙计划 班农：实质行动中</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/10/n12096663.md#1">美国小狗看到自己上电视 高兴得连跳26次</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/12/n12100709.md#1">黄秋生抵台进行居家隔离 自曝准备入籍台湾</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12098060.md#1">尹馨无故高烧入院 一度确诊癌症二期急切肾</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/11/n12099898.md#1">与女儿一起临摹书法 孙俪赞小花毛笔字特棒</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/10/n12097513.md#1">结婚纪念日赶上母亲节 章子怡汪峰晒合照庆祝</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/8/n12092756.md#1">美国先知凯西  预言当今的中国与世界</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/9/n12095021.md#1">武汉瘟疫治寻根 历史天象醒今人（下）</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/4/6/n12007049.md#1">天人预言未来事  识破妖精本色</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/6/n12088824.md#1">中国人的姓名字号（1）</a></li>
-<li><a href="https://github.com/myn254/djy/blob/master/gb/20/5/7/n12091012.md#1">获罪于天无所祷也 他们遭雷劈并不是偶然的</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/myn254/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/myn254/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/13/n12104169.htm">桃园国中会考  高标准防疫措施维护考生权益</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/13/n12104169.htm">桃园国中会考 高标准防疫措施维护考生权益</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/myn254/djy/blob/master/gb/20/5/13/n12104169.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/myn254/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/myn254/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/myn254/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/myn254/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/myn254/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/5/13/n12104169.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
